--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,55 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-packages/*
+# packages/*
 
-# dependencies
-node_modules
-.pnp
-.pnp.js
+# # dependencies
+# node_modules
+# .pnp
+# .pnp.js
 
-# testing
-coverage
+# # testing
+# coverage
 
-# next.js
-.next/
-out/
-next-env.d.ts
+# # next.js
+# .next/
+# out/
+# next-env.d.ts
 
-# nitro
-.nitro/
-.output/
+# # nitro
+# .nitro/
+# .output/
 
-# expo
-.expo/
-expo-env.d.ts
-apps/expo/.gitignore
-apps/expo/ios
-apps/expo/android
+# # expo
+# .expo/
+# expo-env.d.ts
+# apps/expo/.gitignore
+# apps/expo/ios
+# apps/expo/android
 
-# production
-build
+# # production
+# build
 
-# misc
-.DS_Store
-*.pem
+# # misc
+# .DS_Store
+# *.pem
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# # debug
+# npm-debug.log*
+# yarn-debug.log*
+# yarn-error.log*
+# .pnpm-debug.log*
 
-# local env files
-.env
-.env*
-.env*.local
+# # local env files
+# .env
+# .env*
+# .env*.local
 
-# vercel
-.vercel
+# # vercel
+# .vercel
 
-# typescript
-dist/
-.cache
+# # typescript
+# dist/
+# .cache
 
-# turbo
-.turbo
+# # turbo
+# .turbo
