--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # packages/*
-
+packages/db
+packages/email
+packages/events
+# packages/tsconfig
+packages/ui
 # dependencies
 node_modules
 .pnp
