--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # apps/www/app
 apps/www/components
-apps/www/hooks
-apps/www/data
-apps/www/actions
+# apps/www/hooks
+# apps/www/data
+# apps/www/actions
 apps/www/modules
 apps/www/use-cases
 apps/www/utils
