--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # apps/www/app
-apps/www/components/ui
+# apps/www/components/ui
 # apps/www/hooks
 # apps/www/data
 # apps/www/actions
