--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 # apps/www/hooks
 # apps/www/data
 # apps/www/actions
-apps/www/modules
+# apps/www/modules
 apps/www/use-cases
 apps/www/utils
 apps/www/lib
