--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "packages/email/*"
   ],
   "scripts": {
-    "build": "turbo build",
+    "build": "turbo run build",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo clean",
     "db:push": "turbo -F @gnd/db push",
     "db:pull": "turbo -F @gnd/db pull",
     "db:studio": "turbo -F @gnd/db studio",
-    "db-migrate": "turbo -F @gnd/db migrate",
-    "db-generate": "turbo -F @gnd/db prisma-generate",
+    "db:migrate": "turbo -F @gnd/db migrate",
+    "db:generate": "turbo -F @gnd/db generate",
     "dev": "turbo dev --parallel",
     "test": "turbo test --parallel",
     "start:website": "turbo start --filter=@gnd/website",
