--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -13,7 +13,7 @@
     "schema": "./src/schema"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "prisma generate && tsc",
     "dev": "tsc",
     "clean": "rm -rf .turbo node_modules",
     "lint": "biome check .",
