--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -21,7 +21,7 @@
     "typecheck": "tsc --noEmit",
     "db:generate": "bunx with-env prisma generate",
     "migrate": "bunx prisma migrate dev",
-    "prisma-generate": "bunx with-env prisma generate",
+    "prisma-generate": "bunx prisma generate",
     "push": "bunx with-env prisma db push",
     "pull": "bunx with-env prisma db pull",
     "studio": "bunx with-env prisma studio --port 5556",
