--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "db:pull": "turbo -F @gnd/db pull",
     "db:studio": "turbo -F @gnd/db studio",
     "db:migrate": "turbo -F @gnd/db migrate",
-    "db:generate": "turbo -F @gnd/db generate",
+    "db:generate": "turbo -F @gnd/db prisma-generate",
     "dev": "turbo dev --parallel",
     "test": "turbo test --parallel",
     "start:website": "turbo start --filter=@gnd/website",
