--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -20,6 +20,7 @@
         "@dnd-kit/modifiers": "^7.0.0",
         "@dnd-kit/sortable": "^8.0.0",
         "@gnd/db": "workspace:*",
+        "@gnd/ui": "workspace:*",
         "@headlessui/react": "^1.7.17",
         "@hookform/resolvers": "^3.10.0",
         "@mdx-js/loader": "^3.0.0",
