--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -142,6 +142,7 @@
         "zustand": "^5.0.0-rc.2"
     },
     "devDependencies": {
+        "@gnd/tsconfig": "workspace:*",
         "@tailwindcss/typography": "^0.5.10",
         "@trigger.dev/build": "^3.3.13",
         "@types/dot-object": "^2.1.6",
