--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -1,19 +1,41 @@
 {
-    "extends": "@gnd/tsconfig/nextjs.json",
     "compilerOptions": {
+        "target": "es2017",
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "allowJs": true,
+        "checkJs": true,
+        "skipLibCheck": true,
+        "strict": false,
+        "forceConsistentCasingInFileNames": true,
+        "noEmit": true,
+        "esModuleInterop": true,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "jsx": "preserve",
+        "incremental": true,
+        "noUncheckedIndexedAccess": true,
         "baseUrl": ".",
+        "noImplicitAny": false,
+        "plugins": [
+            {
+                "name": "next"
+            }
+        ],
         "paths": {
             "@/*": ["./*"]
-        },
-        "strict": true
+        }
     },
     "include": [
+        ".eslintrc.cjs",
         "next-env.d.ts",
-        "next.config.js",
         "**/*.ts",
         "**/*.tsx",
+        "**/*.cjs",
+        "**/*.mjs",
         ".next/types/**/*.ts",
-        "tailwind.config.ts"
+        "trigger.config.ts"
     ],
     "exclude": ["node_modules"]
 }
